fix md5util and update ckeditor