@@ -1,10 +1,9 @@
 package tech.acodesigner.util;
 
-import sun.misc.BASE64Encoder;
-
 import java.io.UnsupportedEncodingException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import java.util.Base64;
 
 /**
  * Created by 77239 on 2017/2/11/0011.
@@ -12,7 +11,7 @@ import java.security.NoSuchAlgorithmException;
 public class MD5Util {
     public static String encoderPassword(String s) throws NoSuchAlgorithmException, UnsupportedEncodingException {
         MessageDigest md5 = MessageDigest.getInstance("MD5");
-        BASE64Encoder base64Encoder = new BASE64Encoder();
-        return base64Encoder.encode(md5.digest(s.getBytes("utf-8")));
+	    Base64.Encoder base64Encoder = Base64.getEncoder();
+	    return base64Encoder.encodeToString(md5.digest(s.getBytes("utf-8")));
     }
 }
